change overdue and created_on column text alignment for issues grid

--- a/src/sass/components/_list.scss
+++ b/src/sass/components/_list.scss
@@ -91,6 +91,8 @@ table.list {
     &.string,
     &.subject,
     &.updated_on,
+    &.created_on,
+    &.due_date,
     &.project,
     &.tracker,
     &.user {
